finalização da API Agenda de contatos da disciplina Tópicos Avançados em Sistemas Distribuídos 3 2019.1 CIN-UFPE.

--- a/Agenda/agenda-cadastro-server/src/main/resources/api_errors.properties
+++ b/Agenda/agenda-cadastro-server/src/main/resources/api_errors.properties
@@ -1,9 +1,4 @@
 error-1=Internal server error.
 
-error-2=O nome é obrigatório.
-error-3=O e-mail é obrigatório.
-error-4=O telefone é obrigatório. Informe pelo menos um telefone.
-
-
-e-mail.existente=E-mail já existente.
-nao-encontrado=Registro não encontrado na base de dados.
+e-mail.existente=E-mail ja existente.
+nao-encontrado=Registro nao encontrado na base de dados.
