--- a/Agenda/agenda-cadastro-server/pom.xml
+++ b/Agenda/agenda-cadastro-server/pom.xml
@@ -43,19 +43,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
-		  <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		
@@ -81,22 +76,45 @@
 		</dependency>
 		
 		<dependency>
-        <groupId>org.reflections</groupId>
-        <artifactId>reflections</artifactId>
-        <version>0.9.10</version>
-        <exclusions>
-            <exclusion>
-                <groupId>javassist</groupId>
-                <artifactId>javassist</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
+	        <groupId>org.reflections</groupId>
+	        <artifactId>reflections</artifactId>
+	        <version>0.9.10</version>
+	        <exclusions>
+	            <exclusion>
+	                <groupId>javassist</groupId>
+	                <artifactId>javassist</artifactId>
+	            </exclusion>
+	        </exclusions>
+    	</dependency>
 
-    <dependency>
-        <groupId>org.javassist</groupId>
-        <artifactId>javassist</artifactId>
-        <version>3.19.0-GA</version>
-    </dependency>
+	    <dependency>
+	        <groupId>org.javassist</groupId>
+	        <artifactId>javassist</artifactId>
+	        <version>3.19.0-GA</version>
+	    </dependency>
+    
+    	<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>20.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -119,13 +137,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<!-- <repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
-	</repositories> -->
 
 </project>
